--- a/test.tex
+++ b/test.tex
@@ -1,25 +1,13 @@
-% !TeX program = lualatex
 % Using VimTeX, you need to reload the plugin (\lx) after having saved the document in order to use LuaLaTeX (thanks to the line above)
 
-\documentclass[a4paper]{article}
+\documentclass[]{standalone}
 
 % Expanded on !p snip.rv = get_formatted_date() at !p snip.rv = get_formatted_time().
 
-\usepackage{../../style}
-
-\title{test}
-\author{Joachim Favre}
-\date{Mardi 01 juillet 2025}
+\usepackage{amsmath,amsfonts}
 
 \begin{document}
-\maketitle
 
-\lecture{}{2025-07-01}{}{}
-
-
-\begin{align} 
-\left(ka\iff klda\iff dkl\left(\right)\right)
-\end{align}
-
+\[\int_0^1 d\phi \]
 \end{document}
 
