we can see the equation from a browser but there is still issue with the focus and the \[\]

--- a/test.tex
+++ b/test.tex
@@ -1,13 +1,19 @@
-% Using VimTeX, you need to reload the plugin (\lx) after having saved the document in order to use LuaLaTeX (thanks to the line above)
 
-\documentclass[]{standalone}
+\documentclass[preview]{standalone}
 
 % Expanded on !p snip.rv = get_formatted_date() at !p snip.rv = get_formatted_time().
 
 \usepackage{amsmath,amsfonts}
 
 \begin{document}
+\begin{align*} 
+	\int_0^2 d\phi + \frac{15}{45}
+\end{align*}
 
-\[\int_0^1 d\phi \]
+
+	
+    
+$\left(\left(a\right)\right)\int_0^1 \pi\; $
+
 \end{document}
 
