--- a/tests/test.tex
+++ b/tests/test.tex
@@ -6,9 +6,7 @@
 \usepackage{amsmath,amsfonts}
 
 \begin{document}
-\begin{align*} 
-\int_0^2 d\phi + \frac{15}{45}
-\end{align*}
+\begin{align*} \int_0^2 d\phi + \frac{15}{45}\end{align*}
 
 
 	
